    * `desktop`
        * `-supported` was missing
    * `list`
    	* `-len` same as `-size`
    	* `-src` same as `-source`
    * `programcall`
    	* bug fixes
    * `splfol`
        * bug fixes
        * rendering
* Examples
    * `endJobName.ublu` ends first instance of a job by name
    * `readSSLWebIndexPage` make https connection and read the index page
* Extensions
    * `ux.string.ublu`
    * `ux.printobj.ublu`
        * extended with functions for spooled files
    * `ux.user.ublu`
        * prints iASP list
* Test Suite
        * `calljava`
	* `programcall`
* Miscellaneous
    * Changed `stuff` to `share`
    * `bin/ublu` a shell script (bash/ksh) to start ublu
    * `share/ubluwin.properties` default windowing ublu properties file
    * Cleanup `README.md`
    * More work on docs
    	* SSL info
    	* various
    * Generate RPM
        * PASE
    * Begin Atom editor language-ublu support

1.1.9 2017-12-12
-----
* System
    * All dependencies on JTOpenLite removed and that jar removed.
    * -v invocation shows version and exits.
    * PostgreSQL driver 42.1.4
    * Remove 1.8-isms for builds under Java 1.7.
    * Announces Java version.
* Commands
    * `cs` Remove 1.8-isms
    * `db` accepts `-as400`
    * `jrnl` Removed this command for its dependency on JTOpenLite
        * Its functionality can be surpassed by Ublu code using Db2 for i Services
    * `monitor` Removed `-diststatus` which is broken in JTOpenLite
    * `num` Remove 1.8-ism
    * `splfol` spooled file open list api
    * `subsys` command now populates subsystem attributes with a refresh (https://github.com/jwoehr/ublu/issues/19)
* Extensions
    * `ux.qsys2.journal.ublu` journal methods from db2 services
    * `ux.serialize.ublu` Java serialization utilities
    * `ux.sfli.ublu` call on the com.ibm.as400.access.list.SpooledFileListItem
* Testing
    * Test suite now runs on Android
        * t.subsys
* Windowing
    * command-line recall better
    * remove 1.8-isms
