@@ -26,6 +26,7 @@ All rights reserved.
 * Examples
     * `endJobName.ublu` ends first instance of a job by name
     * `readSSLWebIndexPage` make https connection and read the index page
+    * `user_auth_lists` gets interesting auth info about user profiles
 * Extensions
     * `ux.string.ublu`
     * `ux.printobj.ublu`
